--- a/examples/index.html
+++ b/examples/index.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>P5 Game</title>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script> -->
-    <script src="p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
     <script src="bundle.js"></script>
     <script src="sketch.js"></script>
 
