--- a/examples/pong/index.html
+++ b/examples/pong/index.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>P5 Game</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
-    <script src="bundle.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script> -->
+    <script src="http://localhost:9000/p5.js"></script>
+    <script src="../bundle.js"></script>
     <script src="sketch.js"></script>
 
     <style> body {padding: 0; margin: 0;} </style>
