--- a/examples/chaser/index.html
+++ b/examples/chaser/index.html
@@ -5,6 +5,7 @@
     <title>P5 Game</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
     <script src="../bundle.js"></script>
+    <script src="../utils.js"></script>
     <script src="sketch.js"></script>
 
     <style> body {padding: 0; margin: 0;} </style>
