--- a/examples/chaser/index.html
+++ b/examples/chaser/index.html
@@ -9,6 +9,9 @@
     <script src="sketch.js"></script>
 
     <style> body {padding: 0; margin: 0;} </style>
+
+    <div id="sketch-holder"></div>
+
   </head>
   <body>
   </body>
